--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                         <p>
                             Birinci olan takım üyelerinin her birine Macbook Pro Touch Bar </p>
                         <p>
-                            İkinci olan takım üyelerinin her birine Ipad Mini
+                            İkinci olan takım üyelerinin her birine 1.000 TL Hediye Çeki
                         </p>
                         <p>
-                            Üçüncü olan takım üyelerinin her birine Amazon Kindle
+                            Üçüncü olan takım üyelerinin her birine 500 TL Hediye Çeki
                         </p>
                     </div>
                 </div>
