--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
 
                         <p>
                             Ödül sponsorluğunda verdikleri destekten dolayı PRISMA CSI` a teşekkür ederiz. </p>
+                             <a href="https://prismacsi.com" target="_blank"> PRISMACSI.COM </a>
+
                         <p>
 
                             <img src="static/images/prisma.png" style="max-width: 350px;">
@@ -113,6 +115,7 @@
                             <p>
 
                                 Soruların hazırlanmasında verdikleri destekten dolayı Picus Security` e teşekkür ederiz. </p>
+                                 <a href="https://www.picussecurity.com" target="_blank"> PICUSSECURITY.COM </a>
                             <p>
 
                                 <img src="static/images/picus.png" style="max-width: 350px;">
